update the project